--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">CidadeTempo</string>
+    <string name="app_name">Cidade Tempo</string>
+    <string name="app_tittle">CIDADE TEMPO</string>
+    <string name="app_description">Busque informações climáticas \nda sua cidade!</string>
+    <string name="btn_search">BUSCAR</string>
 </resources>
